feat: added role based authentication and applied to users route
